Fixing alignment of the language dropdown

--- a/modules/weblounge-ui/src/main/resources/editor/menubar/menubar.css
+++ b/modules/weblounge-ui/src/main/resources/editor/menubar/menubar.css
@@ -96,7 +96,7 @@ div.wbl-overlayIcons span.wbl-more {
 
 .editor_menubar .wbl-language {
 	position: absolute;
-	top: 0px;
+	top: 10px;
 	right: 500px;
 }
 
